[gd_scene load_steps=3 format=3 uid="uid://c8x4y5z6a7b8"]

[ext_resource type="Theme" uid="uid://d8q4q4q4q4q4" path="res://assets/terminal.tres" id="1_theme"]
[ext_resource type="Script" path="res://scenes/ui/CharacterCreation.gd" id="2_script"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "GENESIS PROTOCOL"
horizontal_alignment = 1

[node name="AttributesContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="FORLabel" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "FORZA (FOR):"

[node name="FORValue" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "--"

[node name="DESLabel" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "DESTREZZA (DES):"

[node name="DESValue" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "--"

[node name="COSLabel" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "COSTITUZIONE (COS):"

[node name="COSValue" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "--"

[node name="INTLabel" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "INTELLIGENZA (INT):"

[node name="INTValue" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "--"

[node name="SAGLabel" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "SAGGEZZA (SAG):"

[node name="SAGValue" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "--"

[node name="CARLabel" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "CARISMA (CAR):"

[node name="CARValue" type="Label" parent="CenterContainer/VBoxContainer/AttributesContainer"]
layout_mode = 2
text = "--"

[node name="RollLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "[R] ROLL STATS"
horizontal_alignment = 1

[node name="StartLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "[ENTER] START JOURNEY"
horizontal_alignment = 1
